<resources>
    <string name="app_name">Quiz App</string>
    <string name="name_edit_text"></string>
    <string name="question_one">1, 3, 5, 7, 8, 9, 11 – which one doesn’t belong to this series?</string>
    <string name="question_1_choice_1">1</string>
    <string name="question_1_choice_2">9</string>
    <string name="question_1_choice_3">8</string>
    <string name="Question_two">29, 27, 24, 20, 15... What is next?</string>
    <string name="question_2_choice_1">7</string>
    <string name="question_2_choice_2">9</string>
    <string name="question_2_choice_3">10</string>
    <string name="question_3">2, 10, 12, 60, 62, 310... What is next?</string>
    <string name="question_3_choice_1">1550</string>
    <string name="question_3_choice_2">312</string>
    <string name="question_3_choice_3">360</string>
    <string name="question_4">Mary, who is sixteen years old, is four times as old as her brother. How old will Mary be when she is twice as old as her brother?</string>
    <string name="question_4_choice_1">20</string>
    <string name="question_4_choice_2">24</string>
    <string name="question_4_choice_3">25</string>
    <string name="question_5">1, 1, 2, 3, 4, 5, 8, 13, 21 - Which one doesn\'t belong to this series?</string>
    <string name="question_5_choice_1">3</string>
    <string name="question_5_choice_2">4</string>
    <string name="question_5_choice_3">5</string>
    <string name="question_6">121,144,169,196 ... What\'s next?</string>
    <string name="question_6_choice_1">225</string>
    <string name="question_6_choice_2">260</string>
    <string name="question_6_choice_3">298</string>
    <string name="question_7">Which number is 1/4 of 1/2 of 1/5 of 200?</string>
    <string name="question_7_choice_1">2</string>
    <string name="question_7_choice_2">5</string>
    <string name="question_7_choice_3">10</string>
    <string name="question_8">Ralph likes 25 but not 24; he likes 400 but not 300; he likes 144 but not 145. Which does he like</string>
    <string name="question_8_choice_1">124</string>
    <string name="question_8_choice_2">200</string>
    <string name="question_8_choice_3">1600</string>
    <string name="question_9">What is the missing number in the sequence shown below? 1 - 8 - 27 - ? - 125 - 216</string>
    <string name="question_9_choice_1">64</string>
    <string name="question_9_choice_2">99</string>
    <string name="question_9_choice_3">46</string>
    <string name="question_10">Which of the following numbers are prime?</string>
    <string name="question_10_choice_1">457</string>
    <string name="question_10_choice_2">504</string>
    <string name="question_10_choice_3">641</string>
    <string name="edit_text_hint">What is your name?</string>
    <string name="key_name">amal</string>
    <string name="key_result">4</string>
    <string name="you_win">You Win </string>
    <string name="you_lose">You Lose </string>
    <string name="start_quiz">Start Quiz</string>
    <string name="brain_quiz">Brain Quiz</string>
    <string name="submit_answers">Submit answers</string>
    <string name="try_again">Try Again</string>
    <string name="exit">Exit</string>
    <string name="share_result">Share result</string>
    <string name="facebook_app_id">1527991550633192</string>
    <string name="brain_image">Brain image</string>
    <string name="result_image">Result image</string>
</resources>
