<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b2dfdb"
    tools:context="tohamy.amal.quizapp.QuizPage">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_one"
            style="@style/questionStyle" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_group_margin_start">

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_choice_1" />

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_choice_2" />

            <RadioButton
                android:id="@+id/question1_choice3"
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_choice_3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/questionStyle"
            android:text="@string/Question_two" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_group_margin_start">

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_choice_1" />

            <RadioButton
                android:id="@+id/question2_choice2"
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_choice_2" />

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_choice_3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            style="@style/questionStyle" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_group_margin_start">

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_choice_1" />

            <RadioButton
                android:id="@+id/question3_choice2"
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_choice_2" />

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_choice_3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            style="@style/questionStyle"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_group_margin_start">

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4_choice_1" />

            <RadioButton
                android:id="@+id/question4_choice2"
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4_choice_2" />

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4_choice_3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5"
            style="@style/questionStyle" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_group_margin_start">

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_choice_1" />

            <RadioButton
                android:id="@+id/question5_choice2"
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_choice_2" />

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_choice_3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_6"
            style="@style/questionStyle" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_group_margin_start">

            <RadioButton
                android:id="@+id/question6_choice1"
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_choice_1" />

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_choice_2" />

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_choice_3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_7"
            style="@style/questionStyle" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_group_margin_start">

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_7_choice_1" />

            <RadioButton
                android:id="@+id/question7_choice2"
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_7_choice_2" />

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_7_choice_3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_8"
            style="@style/questionStyle" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_group_margin_start">

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_8_choice_1" />

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_8_choice_2" />

            <RadioButton
                android:id="@+id/question8_choice3"
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_8_choice_3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_9"
            style="@style/questionStyle"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_group_margin_start">

            <RadioButton
                android:id="@+id/question9_choice1"
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_9_choice_1" />

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_9_choice_2" />

            <RadioButton
                style="@style/ChoicesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_9_choice_3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_10"
            style="@style/questionStyle" />

        <CheckBox
            android:id="@+id/question10_choice1"
            style="@style/ChoicesStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_group_margin_start"
            android:text="@string/question_10_choice_1" />

        <CheckBox
            android:id="@+id/question10_choice2"
            style="@style/ChoicesStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_group_margin_start"
            android:text="@string/question_10_choice_2" />

        <CheckBox
            android:id="@+id/qustion10_choice3"
            style="@style/ChoicesStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_group_margin_start"
            android:text="@string/question_10_choice_3" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin_start"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:buttonTint="#00766c"
            android:hint="@string/edit_text_hint"
            android:inputType="textCapWords" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/submit_answers_button_margin"
            android:background="@drawable/button"
            android:onClick="summitAnswers"
            android:shadowColor="#64d8cb"
            android:shadowRadius="5"
            android:text="@string/submit_answers"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/submit_answers_button_text_size" />

    </LinearLayout>


</ScrollView>
