<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b2dfdb"
    tools:context="tohamy.amal.quizapp.ResultPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/result_page_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/result_image" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/result_page_margin"
            android:singleLine="true"
            android:textColor="#344A5E"
            android:textSize="@dimen/result_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/result_page_margin"
            android:textColor="#00766c"
            android:textSize="@dimen/score_text_size"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/try_again_button"
                android:layout_width="@dimen/result_page_button_width"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="tryAgain"
                android:text="@string/try_again"
                style="@style/ResultPageButtons" />

            <Button
                android:id="@+id/exit_button"
                android:layout_width="@dimen/result_page_button_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="exit"
                android:text="@string/exit"
                style="@style/ResultPageButtons" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="shareResult"
            android:text="@string/share_result"
            style="@style/ResultPageButtons" />

    </LinearLayout>

</ScrollView>
