<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b2dfdb">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="tohamy.amal.quizapp.MainPage">

        <ImageView
            android:id="@+id/brain_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/brain_image_margin"
            android:src="@drawable/idea"
            android:contentDescription="@string/brain_image" />

        <TextView
            android:id="@+id/brain_quiz_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/brain_image"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/brain_text_margin"
            android:text="@string/brain_quiz"
            android:textColor="@android:color/black"
            android:textSize="@dimen/brain_quiz_text_size"
            android:textStyle="bold" />


        <Button
            android:id="@+id/start_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/brain_quiz_textview"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/start_quiz_button_margin"
            android:background="@drawable/button"
            android:onClick="startQuiz"
            android:shadowColor="#64d8cb"
            android:shadowRadius="5"
            android:text="@string/start_quiz"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/start_quiz_button_text_size" />

    </RelativeLayout>

</ScrollView>
